--- a/src/app.html
+++ b/src/app.html
@@ -2,8 +2,20 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" href="%sveltekit.assets%/favicon.ico" sizes="any">
+		<link rel="apple-touch-icon" href="%sveltekit.assets%/apple-touch-icon-180x180.png">
+
 		<meta name="viewport" content="width=device-width" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0" user-scalabe="no" />
+		<link id="status-bar-icon" rel="mask-icon" href="%sveltekit.assets%/vite.svg" color="#FFFFFF">
+		<meta name="theme-color" content="#191C1C">
+
+
+		<title>Pump It</title>
+		<meta name="description" content="Bora malha">
+
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
